# cxx_simple_script_interpreteur

./: .gitignore  CMakeLists.txt  README.md  explain.md
source/: CMakeLists.txt  lexer_test.h  run_test.cpp
source/executor/: executor.h
source/lexer/: README.md  lexer.cpp  lexer.h  token.h
source/parser/: README.md  parser.h
source/tests/: executor_test.cpp  interpreteur_tests.h  lexer_test.cpp  parser_test.cpp
